--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Waldy Portfolio 
-show_downloads: true
+show_downloads: false
 google_analytics:
-theme: jekyll-theme-slate
+theme: jekyll-theme-minimal
