--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Waldy Setiono | Portfolio 
+description: waldysetiono@gmail.com
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
