--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Waldy Setiono | Portfolio 
-description: waldysetiono@gmail.com | "[linkedin](https://www.linkedin.com/in/waldysetiono/)" | "[github](https://github.com/waldysetio)"
+title: Waldy Setiono | Portfolio
+description: waldysetiono@gmail.com
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
